# whitespace-python

./: .gitignore  CHANGELOG.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: makefile.yml  publish.yml
test/: pyproject.toml  test_cli.py  test_interpreter.py  test_memory.py  test_parser.py  test_peripherals.py  test_stack.py  test_vm.py
test/fixtures/: parse-error.ws
test/instructions/: test_arithmetic.py  test_flow_control.py  test_io.py  test_stack_manipulation.py
whitespace/: __init__.py  cli.py  error.py  interpreter.py  parser.py  peripherals.py  stack.py  vm.py
whitespace/instructions/: __init__.py  arithmetic.py  instruction.py  stack_manipulation.py
