[tool.poetry]
name = "whitespace2"
packages = [{include="whitespace"}]
version = "1.0.0"
description = "An interpreter written in Python for the imperative, stack-backed language called Whitespace"
authors = ["rzuckerm"]
license = "LICENSE"
readme = "README.rst"
homepage = "https://github.com/rzuckerm/whitespace-python"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rzuckerm/whitespace-python/issues"
"Changelog" = "https://github.com/rzuckerm/whitespace-python/blob/master/CHANGELOG.rst"

[tool.poetry.scripts]
whitespace = "whitespace.cli:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
coverage = "7.6.1"
pylint = "~3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.format]
max-line-length = 100

[tool.pylint.message]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "redefined-builtin",
    "bare-except",
    "no-else-break",
    "no-else-raise",
    "no-else-return",
    "too-few-public-methods",
    "too-many-branches",
    "consider-using-f-string",
    "too-many-instance-attributes",
    "too-many-return-statements",
]
